# gamedev-math-practice

./: .gitignore  CMakeLists.txt  main.cpp
matrix/: matrix2.hpp  matrix2.inl
vector/: vector.hpp  vector.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl
